--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "keywords": "cookie",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "name": "cookie-m",
   "author": "ishiduca@gmail.com",
   "license": "MIT",
@@ -9,5 +9,8 @@
   "devDependencies": {
     "qunitjs": "~1.10.0",
     "qunit-tap": "~1.4.1"
+  },
+  "scripts": {
+    "test": "with-sound prove -e node --ext .js -v"
   }
 }
